2011-06-23  Murray Cumming  <murrayc@murrayc.com>

	Do not hide table-specific menu items in Operator mode.

	* glom/application.cc: update_table_sensitive_ui().

2011-06-22  Murray Cumming  <murrayc@murrayc.com>

	Main Window: Combine the top two rows of widgets.

	* glom/utility_widgets/notebook_noframe.[h|cc]: Add 
	set_action_widget(), as in the GtkNotebook API.
	* glom/glom.glade:
	* glom/frame_glom.[h|cc]: Remove the top HBox, instead 
	putting the table name label in the notebook widget, 
	at the left of the tabs.

2011-06-22  Murray Cumming  <murrayc@murrayc.com>

	Remove the User Level menu and the User Level label.

	* glom/glom.glade: Main window: Remove the User Level label.
	* glom/application.[h|cc]:
	* glom/frame_glom.[h|cc]: Remove the User Level menu, moving 
	its two radio menu items to the top of the Developer menu.
	init_menus(), update_table_sensitive_ui(): Make sure that all
	developer items are deactivated in operator mode, now that 
	we don't just deactivate the whole developer menu.

2011-06-22  Murray Cumming  <murrayc@murrayc.com>

	Main window: Simplify widgets at top.

	* glom/glom.glade:
	* glom/frame_glom.[h|cc]: Remove the Table: label. Make the 
	table name normal sized, but still bold. Remove the mode 
	labels, because there are only two modes now, and it should 
	be obvious when you are in the middle of entering find criteria.

2011-06-22  Murray Cumming  <murrayc@murrayc.com>

	glom.glade: Resave with glade.

	* glom/glom.glade: Resave with glade 3.10, which changes 
	object IDs to be unique across the whole file.
	Chose human-readable IDs instead of number suffixes.
	* glom/navigation/box_tables.cc:
	* glom/frame_glom.cc: Adapted the code.
	This is rather tedious and just makes code less readable.

2011-06-22  Murray Cumming  <murrayc@murrayc.com>

	glom.glade: Reorder top-levels alphabetically.

	* glom/glom.glade: Glade now does this when saving,
	so this will make it easier to see what else Glade 
	has changed.

1.19.5:
